# Licence-Informatique

./: .gitignore  LICENSE  README.md
LIcence 2/I31/: test.c  test.h
Licence 1/I11/: test.py
Licence 1/I11/Exam/: test.py
Licence 1/I11/TP1/: tp1_1.py  tp1_2.py  tp1_3.py
Licence 1/I11/TP2/: tp2_1_1.py  tp2_1_2.py  tp2_1_3.py  tp2_2.py  tp2_3.py  tp2_4.py  tp2_5.py  tp2_6_1.py  tp2_6_2.py  tp2_7_1.py  tp2_7_2.py  tp2_8_1.py  tp2_8_2.py
Licence 1/I11/TP3/: pocketnoobj.py  tp3_2_1.py  tp3_2_2.py  tp3_2_3.py  tp3_2_4.py  tp3_3_1.py  tp3_3_2.py  tp3_3_3.py  tp3_4_4.py  tp3_4_5.py  tp3_4_6.py  tp3_5.py
Licence 1/I11/TP4/: ex2.1.py  ex2.2.py  ex3.1.py  ex3.2.py  ex3.3.py  ex4.1.py  ex4.2.py  ex4.3.py  ex5.2.py  ex5.3.py  ex6.1.py  ex6.py
Licence 1/I11/TP5/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  text.py
Licence 1/I11/TP6/: ex1.py  ex2.py  ex3.py  ex4.py
Licence 1/I11/TP7/: geometrie_2d.py  geometrie_3d.py  main_2d.py  main_3d.py  pocketgl.py  vecteur.py
Licence 1/I12/: ex1.ord  ex2.ord  ex3.1.ord  ex3.2.ord  ex3.3.ord  ex4.ord  ex5.2.ord  ex5.ord  ex6.ord
Licence 1/I21/: test.py
Licence 1/I21/Cours/: I21 - Algorithmique.tex
Licence 1/I21/TP2/: matplot.py
Licence 1/I21/TP3/: tp_3.py
Licence 1/I21/TP4/: dico-fr.txt  dico.py  pancake.py  tripancake.py  tris.py
Licence 1/I22/Cours/: I22 - Architecture ordinateur.tex
Licence 2/: ex_9.py
Licence 2/I41/Révisions/TP/: CMakeLists.txt
Licence 2/I41/Révisions/TP/src/: main.h
Licence 2/I43/TP1/: CMakeLists.txt
Licence 2/I43/TP1/src/: caesar.c  caesar.h  vigenere.c  vigenere.h
(+312 files in other folders)
